--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -60,7 +60,7 @@
                     <div class="tituloKpi">
                         <h2>Fábrica mais crítica:</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="fabricaCritica" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                            <p class="dadoKpi" id="fabricaCritica" style="color: red;">Fábrica 1</p>
                         </span>
                         <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="tituloKpi">
                         <h2>Tempo na resolução dos alertas:</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="nomeFabricaTempo" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                            <p class="dadoKpi" id="nomeFabricaTempo" style="color: red;">Fábrica 1</p>
                         </span>
                         <h3 id="mediaAlerta">50(Min)</h3>
                     </div>
@@ -81,7 +81,7 @@
                     <div class="tituloKpi">
                         <h2>Quantidade Fábricas em estado crítico</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="qtdFabricasCriticas" style="color: white; text-shadow: 2px 2px 4px red;">13 Fábricas</p>
+                            <p class="dadoKpi" id="qtdFabricasCriticas" style="color: red;">13 Fábricas</p>
                         </span>
                         <h3>Clique <a id="fabricas">aqui</a> para ver elas</h3>
                     </div>
@@ -97,7 +97,7 @@
                         <div class="tituloKpi">
                             <h2>Fábrica mais crítica:</h2>
                             <span class="txtKpi">
-                                <p class="dadoKpi" id="fabricaCritica" style="color: white; text-shadow: 2px 2px 4px red;">Fábrica 1</p>
+                                <p class="dadoKpi" id="fabricaCritica" style="color: red;">Fábrica 1</p>
                             </span>
                             <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                         </div>
@@ -106,6 +106,7 @@
 
                 <div class="paginacao" id="paginacao"></div>
                 <div class="info-pagina" id="info-pagina"></div>
+                <div class="tituloModal">Predição de como estará as fábricas selecionadas dentro de 30 dias:</div>
                 <div id="graficoPredicao"></div>
                 <div class="fechar">
                     <h1>FECHAR</h1>
