--- a/web-data-viz/public/dashMonitoramento-vitor-especifico.html
+++ b/web-data-viz/public/dashMonitoramento-vitor-especifico.html
@@ -143,7 +143,16 @@
                             </div>
                             <div id="chart"></div>
                         </div>
-                        <div class="discoChart charts"></div>
+                        <div class="discoChart charts">
+                            <div class="informacoesCPU textoGrafico">
+                                <h4>Disco</h4>
+                                <div>
+                                    <h5>Utilização</h5>
+                                    <p id="utilizacaoInfoDisco">8,23 / 22,12gb</p>
+                                </div>
+                            </div>
+                            <div id="chartDisco"></div>
+                        </div>
                     </div>
 
                     <div class="sessao2Charts">
