grafico alertas pronto

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opticar - Análise de Dados</title>
-    <link rel="stylesheet" href="assets/styles/graficosDashComponente.css">
+    <link rel="stylesheet" href="assets/styles/dashComponente.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="./assets/Scripts/sessao.js" defer></script>
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
@@ -118,7 +118,7 @@
                         </h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="probFalha" style="color: red;">00</p>
+                        <p class="dadoKpi" id="probFalha">00</p>
                     </span>
                     <h3>Quantidade de alerta total: <p id="qtdAlertasTotal">00</p>
 
