Gestão de infra v10

--- a/web-data-viz/public/dashGestaofabrica.html
+++ b/web-data-viz/public/dashGestaofabrica.html
@@ -7,7 +7,7 @@
     <title>Opticar - Gestão de Infraestrutura</title>
 
     <!-- Estilos -->
-    <link rel="stylesheet" href="assets/styles/monitoramentoGestao Fabrica.css">
+    <link rel="stylesheet" href="assets/styles/monitoramentoGestaoInfra.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
 
@@ -70,7 +70,7 @@
             <button class="tab">RAM</button>
             <button class="tab active">CPU</button>
             <button class="tab">DISCO</button>
-            <button class="tab">REDE</button>
+            <button class="tab">PROCESSOS</button>
             <button class="arrow arrow-right">&#9654;</button>
         </div>
 
@@ -81,6 +81,7 @@
                  <div class="caixasumario2">
                     <div style="display: flex; align-items: center; justify-content: space-between;
 gap: 20px;">
+
   <div class="textovalor2">Prioridade de nivel alta ⚠</div>
   
   <div class="heat-indicator">
