feat: captura em tempo real v0.2

--- a/web-data-viz/public/dashMonitoramento-vitor.html
+++ b/web-data-viz/public/dashMonitoramento-vitor.html
@@ -112,7 +112,7 @@
                                 <th>Visualizar</th>
                             </tr>
                         </thead>
-                        <td data-label="ID">1</td>
+                        <!-- <td data-label="ID">1</td>
                         <td data-label="Servidor">SV001
                         </td>
                         <td data-label="CPU">80%</td>
@@ -120,7 +120,7 @@
                         <td data-label="Disco">100%</td>
                         <td data-label="Rede">60%</td>
                         <td data-label="Visualizar"><i class="fa fa-eye" aria-hidden="true" onclick="abrirModal()"></i>
-                        </td>
+                        </td> -->
                     </table>
                     <div class="pagination" id="paginacao"></div>
                 </div>
