--- a/web-data-viz/public/dashMonitoramento-vitor.html
+++ b/web-data-viz/public/dashMonitoramento-vitor.html
@@ -88,7 +88,7 @@
 
                         <div class="tempo_atividade">
                             <h3>Total de servidores monitorados</h3>
-                            <p>6</p>
+                            <p id="qtdTotalServidores">6</p>
                         </div>
                     </div>
                 </div>
