kpi uso dash componente

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -111,7 +111,7 @@
             <!-- kpis -->
             <div class="kpis">
 
-                <!-- USO CPU -->
+                <!-- KPI ALERTAS -->
                 <div class="kpiIdv">
                     <div class="tituloKpi">
                         <h2 style="display: flex; gap: 3px;">Percentual de alertas críticos <p id="kpiMes"></p>
@@ -124,18 +124,18 @@
 
                 </div>
 
-                <!-- USO RAM -->
+                <!-- KPI USO MEDIO  -->
                 <div class="kpiIdv">
                     <div class="tituloKpi">
-                        <h2 style="display: flex; gap: 3px;">Pico de uso máximo <p id="kpiMes2"></p></h2>
+                        <h2 style="display: flex; gap: 3px;">Porcentagem de uso médio <p id="kpiMes2"></p></h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="usoRam">60%</p>
+                        <p class="dadoKpi" id="usoMedio">00%</p>
                     </span>
-                    <h3>Quantidade de alerta total: <p id="parametroAlerta">00</p>
+                    <h3>Comparativo com o mês anterior: <p id="comparacaoUso">00</p>
                 </div>
 
-                <!-- USO DISCO -->
+                <!-- KPI MTBF -->
                 <div class="kpiIdv">
                     <div class="tituloKpi">
                         <h2>Tempo médio entre alertas (MTBF)</h2>
@@ -146,7 +146,7 @@
                     <h3>Classificação: <b id="classificacaoMtbf">...</b></h3>
                 </div>
 
-                <!-- USO DISCO -->
+                <!-- KPI CONFIABILIDADE -->
                 <div class="kpiIdv">
                     <div class="tituloKpi">
                         <h2>Índice de confiabilidade</h2>
