arruma rotas admin

--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -55,6 +55,9 @@
         </div>
 
         <div class="painelDash">
+            <div class="titulo">
+                <h1></h1>
+            </div>
             <div class="containerKPI">
                 <div class="kpiUso">
                     <div class="tituloKpi">
@@ -62,7 +65,9 @@
                         <span class="txtKpi">
                             <p class="dadoKpi" id="fabricaCritica" style="color: red;">Fábrica 1</p>
                         </span>
+                        <h3 id="statusKpiCritica" style="color: green;">Status: Ok</h3>
                         <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
+                        
                     </div>
                 </div>
 
@@ -70,9 +75,9 @@
                     <div class="tituloKpi">
                         <h2>Tempo na resolução dos alertas:</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="nomeFabricaTempo" style="color: red;">Fábrica 1</p>
+                            <p class="dadoKpi" id="mediaAlerta" style="color: red;">Fábrica 1</p>
                         </span>
-                        <h3 id="mediaAlerta">50(Min)</h3>
+                        <h3 id="nomeFabricaTempo">50(Min)</h3>
                     </div>
                 </div>
 
