--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -87,7 +87,6 @@
                             <select id="sltComponente">
                                 <option value="Cpu" selected>CPU</option>
                                 <option value="Ram">RAM</option>
-                                <option value="Rede">Rede</option>
                                 <option value="Disco">Disco</option>
                             </select>
                         </div>
@@ -118,9 +117,9 @@
                         </h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="probFalha">00</p>
+                        <p class="dadoKpi" id="probFalha">0</p>
                     </span>
-                    <h3>Quantidade de alerta total: <p id="qtdAlertasTotal">00</p>
+                    <h3>Quantidade de alerta total: <p id="qtdAlertasTotal">0</p>
 
                 </div>
 
@@ -132,7 +131,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="usoMedio">00%</p>
                     </span>
-                    <h3>Comparativo com o mês anterior: <p id="comparacaoUso">00</p>
+                    <h3>Comparativo com o mês anterior: <p id="comparacaoUso">0</p>
                 </div>
 
                 <!-- KPI MTBF -->
@@ -141,7 +140,7 @@
                         <h2>Tempo médio entre alertas (MTBF)</h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="mtbf">52 min</p>
+                        <p class="dadoKpi" id="mtbf">0</p>
                     </span>
                     <h3>Classificação: <b id="classificacaoMtbf">...</b></h3>
                 </div>
@@ -152,7 +151,7 @@
                         <h2>Índice de confiabilidade</h2>
                     </div>
                     <span class="txtKpi">
-                        <p class="dadoKpi" id="confiabilidade">42/100</p>
+                        <p class="dadoKpi" id="confiabilidade">0</p>
                     </span>
                     <h3>Status: <p style="color: yellow;">Zona de risco</p>
                     </h3>
