--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -119,7 +119,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="probFalha">0</p>
                     </span>
-                    <h3>Quantidade de alerta total: <p id="qtdAlertasTotal">0</p>
+                    <h3>Quantidade de alerta total: <p class="infoKpi" id="qtdAlertasTotal">0</p>
 
                 </div>
 
@@ -131,7 +131,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="usoMedio">00%</p>
                     </span>
-                    <h3>Comparativo com o mês anterior: <p id="comparacaoUso">0</p>
+                    <h3>Comparativo com o mês anterior: <p  class="infoKpi" id="comparacaoUso">0</p>
                 </div>
 
                 <!-- KPI MTBF -->
@@ -142,7 +142,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="mtbf">0</p>
                     </span>
-                    <h3>Classificação: <b id="classificacaoMtbf">...</b></h3>
+                    <h3>Classificação: <b   class="infoKpi" id="classificacaoMtbf">...</b></h3>
                 </div>
 
                 <!-- KPI CONFIABILIDADE -->
@@ -153,7 +153,7 @@
                     <span class="txtKpi">
                         <p class="dadoKpi" id="confiabilidade">0</p>
                     </span>
-                    <h3>Status: <p style="color: yellow;">Zona de risco</p>
+                    <h3>Status: <p id="faixaConfiabilidade"  class="infoKpi" style="color: yellow;">Zona de risco</p>
                     </h3>
                 </div>
 
