arruma rota admin

--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -55,17 +55,17 @@
         </div>
 
         <div class="painelDash">
-            <div class="titulo">
+            <!-- <div class="titulo">
                 <h1></h1>
-            </div>
+            </div> -->
             <div class="containerKPI">
                 <div class="kpiUso">
                     <div class="tituloKpi">
                         <h2>Fábrica mais crítica:</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="fabricaCritica" style="color: red;">Fábrica 1</p>
+                            <p class="dadoKpi" id="fabricaCritica">Fábrica 1</p>
                         </span>
-                        <h3 id="statusKpiCritica" style="color: green;">Status: Ok</h3>
+                        <h3 id="statusKpiCritica">Status: Ok</h3>
                         <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                         
                     </div>
@@ -75,7 +75,7 @@
                     <div class="tituloKpi">
                         <h2>Tempo na resolução dos alertas:</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="mediaAlerta" style="color: red;">Fábrica 1</p>
+                            <p class="dadoKpi" id="mediaAlerta">Fábrica 1</p>
                         </span>
                         <h3 id="nomeFabricaTempo">50(Min)</h3>
                     </div>
@@ -86,7 +86,7 @@
                     <div class="tituloKpi">
                         <h2>Quantidade Fábricas em estado crítico</h2>
                         <span class="txtKpi">
-                            <p class="dadoKpi" id="qtdFabricasCriticas" style="color: red;">13 Fábricas</p>
+                            <p class="dadoKpi" id="qtdFabricasCriticas">13 Fábricas</p>
                         </span>
                         <h3>Clique <a id="fabricas">aqui</a> para ver elas</h3>
                     </div>
@@ -102,7 +102,7 @@
                         <div class="tituloKpi">
                             <h2>Fábrica mais crítica:</h2>
                             <span class="txtKpi">
-                                <p class="dadoKpi" id="fabricaCritica" style="color: red;">Fábrica 1</p>
+                                <p class="dadoKpi" id="fabricaCritica">Fábrica 1</p>
                             </span>
                             <h3 id="quantidadeAlertas">13 Alertas em aberto</h3>
                         </div>
@@ -131,15 +131,14 @@
                             <p id="pStatus">Status:</p>
                             <p id="pQtdAlertaAberto">Quantidade de Alertas em aberto:</p>
                             <p id="pQtdAlertaAndamento">Quantidade de Alertas em andamento:</p>
-                            <p id="pTempoResolucao">Tempo médio de resolução por alerta(minutos):</p>
-                            <p id="pPredicao">Predição para daqui 30 dias:</p> 
+                            <p id="pTempoResolucao">Tempo médio de resolução por alerta:</p>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="areaPredicao">
-                <h2>Gostaria de fazer uma predição para ver como estará suas fábricas? <a id="cliqueAqui">Clique aqui</a></h2> 
+                <h2>Gostaria de fazer uma predição para ver como estará suas fábricas? <u><a id="cliqueAqui">Clique aqui</a></u></h2> 
             </div>
         </div>
     </div>
