arruma cadMaq para inserir pedidos padrão

--- a/web-data-viz/public/fabricas.html
+++ b/web-data-viz/public/fabricas.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <link rel="stylesheet" href="./assets/styles/fabrica.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
     <script src="./assets/Scripts/backendfabrica.js"></script>
     <title>Lista de Fábricas</title>
@@ -29,7 +32,7 @@
 
             </ul>
         </div>
-
+        
         <div class="contentContainer">
             <div class="cabecalho">
                 <div class="empresa">
@@ -52,7 +55,7 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="titleContainer">
                 <h1>Lista de Fábricas</h1>
             </div>
