--- a/web-data-viz/public/dashMonitoramento-vitor-especifico.html
+++ b/web-data-viz/public/dashMonitoramento-vitor-especifico.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="assets/styles/monitoramento.css"> -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="./assets/Scripts/sessao.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
     <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -138,7 +138,7 @@
                                 <h4><i class='bx bx-chip'></i> CPU</h4>
                                 <div>
                                     <h5>Utilização</h5>
-                                    <p id="utilizacaoInfo">100%</p>
+                                    <p id="utilizacaoInfo"></p>
                                 </div>
                             </div>
                             <div id="chart"></div>
