troca de gráficos predições

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -225,10 +225,9 @@
                         </div>
                         <div class="escolha">
                             <span>Tipo de Previsão:</span><br>
-                            <select id="tipo">
+                            <select id="slt_predicao">
                                 <option value="alertas">Número de Alertas Previstos (Prox. Mês)</option>
-                                <option value="risco">Percentual de alertas críticos (Próx.Semestre)</option>
-                                <option value="tendencia">Tendência de Crescimento de Uso (7 dias)</option>
+                                <option value="uso">Tendência de Crescimento de Uso (7 dias)</option>
                             </select>
                         </div>
                     </div>
