--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -55,8 +55,20 @@
         </div>
 
         <div class="painelDash">
-            <div class="tituloDASH">
-                <h1>Análise do andamento das Fábricas</h1>
+
+             <div class="cabecalhoDash">
+                <div class="texto">
+                    <div class="tituloDash">
+                        <p id="titulo">Monitoramento das Fábricas da sua Empresa - </p>
+                        <!-- data -->
+                        <div
+                            style="display: flex; align-items: center; gap: 10px; margin-left: 10vw; color: gray;height: 5vh;">
+                            <i class='bx bxs-time' style="font-size: 20px;"></i>
+                            <p id="dataInfo"></p>
+                        </div>
+                    </div>
+                    <p class="descricao"> Acompanhe o status das suas Fábricas.</p>
+                </div>
             </div>
             
             <div class="containerKPI">
@@ -109,6 +121,9 @@
                             <h3 id="statusKpiCriticaModal">Status: Ok</h3>
                             <h3 id="quantidadeAlertasModal">13 Alertas em aberto</h3>
                         </div>
+                        <div class="bobPredicao">
+                            <img src="./assets/images/bobIA-removebg-preview.png" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="paginacao" id="paginacao"></div>
@@ -124,12 +139,31 @@
                     <h1>FECHAR</h1>
                 </div>
             </div>
-            <div class="tituloGrafico">
-                <h2>Quantidade de alertas por fábrica:</h2>
+            <div class="bobAlerta">
+                <img src="./assets/images/bobIA-removebg-preview.png" alt="">
             </div>
             <div class="containerGraficos">
                 <div class="graficos">
-                    <div id="graficoAlertaFabricas">
+                     <div class="grafBox">
+                        <div class="grafContainer">
+                            <h4 style="display: flex; justify-content: space-between;width: 26vw;">
+                                <div class="nomeGrafico" style="display: flex; gap: 5px;">Quantidade de alertas - <p>
+                                        Por fábrica</p>
+                                </div>
+                                <p style="border-bottom: solid 1px gray; color: gray;">
+                                    <span id="tipoFiltro-uso">Atual</span> -
+                                    <span id="periodo-uso">2025</span>
+                                </p>
+                            </h4>
+                            <div class="filtrar">
+                                <h3>Visualizar predição:</h3>
+                                <div class="iconeFiltro" onclick="filtrarAlerta()">
+                                   <u><a id="cliqueAqui"><i class='bx bx-time-five' style="color: #ffffff;"></i></a></u> 
+                                </div>
+                            </div>
+                        </div>
+                        <div id="graficoAlertaFabricas"></div>
+                    </div>   
                         
                     </div>
 
@@ -146,10 +180,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="areaPredicao">
-                <h2>Gostaria de fazer uma predição para ver como estará suas fábricas? <u><a id="cliqueAqui">Clique aqui</a></u></h2> 
             </div>
         </div>
     </div>
